tests/error/comptime_expr_errors/unsupported_in_list.err
Error: Unsupported Python value (at $FILE:13:14)
   | 
11 | def main() -> None:
12 |     q = qubit()
13 |     randval = comptime(randints)[get_current_shot()]
   |               ^^^^^^^^^^^^^^^^^^ Python value of type `<class 'numpy.int64'>` cannot be used
   |                                  in Guppy

Note: Unsupported value was found inside a `list`

Guppy compilation failed due to 1 previous error
